--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,30 +1,10 @@
-
-
- <image class='bg' mode="scaleToFill" src='{{bg}}' ></image> 
+<image class='bg' mode="scaleToFill" src='../../icon/bg0.png'></image>
 <view class='choose'>
-
-
-<view style='display:block;text-align:center;color:white;padding-top:30rpx;font-family:Viner Hand ITC'>请选择你的学校</view>
-
-
-
-
-<radio-group class="radio-group" bindchange="radioChange">
-  <label class="radio" style="display:flex;padding:20rpx;" wx:for="{{items}}" wx:key='index'>
-    <radio value="{{item.value}}"/>{{item.value}}
-  </label>
-</radio-group>
-
-
-
-<button class='sure' bindtap='sure'>确认</button>
-
-
-
-
-
-
-
-
+  <view style='display:block;text-align:center;color:white;padding-top:30rpx;font-family:Viner Hand ITC'>请选择你的学校</view>
+  <radio-group class="radio-group" bindchange="radioChange">
+    <label class="radio" style="display:flex;padding:20rpx;" wx:for="{{items}}" wx:key='index'>
+      <radio value="{{item.value}}" />{{item.value}}
+    </label>
+  </radio-group>
+  <button class='sure' bindtap='sure'>确认</button>
 </view>
- 
