--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,29 +1,25 @@
-.bg{
-  width:750rpx;
-height:1197rpx
-
+.bg {
+  width: 750rpx;
+  height: 1197rpx;
 }
-.choose{
-  position:absolute;
-background-color:#fbe5d6;
-margin:0 31px;
-top:350rpx;
 
+.choose {
+  position: absolute;
+  background-color: #fbe5d6;
+  margin: 0 31px;
+  top: 350rpx;
 }
+
 radio-group {
-display:block;
-
-margin:0 150rpx;
-
+  display: block;
+  margin: 0 150rpx;
 }
-.sure{
-width:300rpx;
-height:80rpx;
-color: black;
 
-  background-color:white;
-line-height:80rpx;
-margin:50rpx auto
-
- 
+.sure {
+  width: 300rpx;
+  height: 80rpx;
+  color: black;
+  background-color: white;
+  line-height: 80rpx;
+  margin: 50rpx auto;
 }
