--- a/pages/schedule/schedule.wxss
+++ b/pages/schedule/schedule.wxss
@@ -1,52 +1,239 @@
-/**index.wxss**/
+/* pages/schedule/schedule.wxss */
 
-.flex-item {
-  width: 95rpx;
-  height: 100px;
+image {
+  width: 30rpx;
+  height: 30rpx;
+  display: inline-block;
+  overflow: hidden;
 }
 
-.kcb-item {
-  position: absolute;
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  border-radius: 5px;
-}
-
-.smalltext {
-  font-size: 8pt;
-  color: #fff;
-  padding-left: 2px;
-}
-
-.top {
+.nav-head {
   display: flex;
   flex-direction: row;
-  margin-left: 35rpx;
-  background-color: pink;
-  color: white;
+  align-items: center;
+  justify-content: space-between;
+  height: 80rpx;
+  border-bottom: 1rpx solid #cacbcc;
+  background-color: #ffd0d0;
 }
 
-.top-text {
-  width: 150rpx;
-  height: 35rpx;
-  font-size: 9pt;
+.week-selector {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 330rpx;
+  margin: 0 auto;
+  padding-left:90rpx;
+
+}
+
+.cur-week {
+  text-align: center;
+  line-height: 1.5;
+}
+
+.cur-week .week {
+  font-size: 28rpx;
+  color: #18191a;
+}
+
+.cur-week .title {
+  font-size: 28rpx;
+  color: #7a7d80;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.share{
+  float: right;
+  margin-right: 30rpx
+  
+}
+button{
+  margin:0;
+  padding: 0
+}
+button[plain] {
+
+border:0px solid #353535;
+
+}
+
+.add-course-btn {
+  width: 52rpx;
+  height: 52rpx;
+  margin-left: 20rpx;
+}
+
+.feedback-btn {
+  width: 50rpx;
+  height: 48rpx;
+  margin-right: 20rpx;
+}
+
+.pre-week-btn image {
+  width: 30rpx;
+  height: 30rpx;
+}
+
+image {
+  width: 20rpx;
+  height: 20rpx;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.next-week-btn image {
+  width: 30rpx;
+  height: 30rpx;
+}
+
+.tab-top {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 50px;
+}
+
+.cur-month {
+  width: 106rpx;
+  height: 52rpx;
+  background-color: #ffd0d0;
+  text-align: center;
+  line-height: 52rpx;
+  color: #fff;
+  font-size: 28rpx;
+  border-top-right-radius: 30rpx;
+  border-bottom-right-radius: 30rpx;
+}
+
+.week-list {
+  display: flex;
+  flex-direction: row;
+  max-width: 100%;
+  height: 100%;
+}
+
+.day-text {
+  width: 90rpx;
+  height: 100%;
+  font-size: 28rpx;
   justify-content: center;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-.scroll {
-  height: 1170rpx;
-  z-index: 101;
+.day-text.active {
+  background-color: #ffd0d0;
+}
+
+.day-text.active text {
+  color: #fff !important;
+}
+
+.day-text text:first-child {
+  color: #18191a;
+}
+
+.day-text text:last-child {
+  color: #7a7d80;
+}
+
+.tab-scroll {
+  height: calc(100% - 57px - 50px);
+  z-index: 10;
   position: fixed;
+  border-top: 1rpx solid #cacbcc;
+  background-color: #fff;
 }
 
-.left {
-  width: 35rpx;
-  height: 100rpx;
-  font-size: 9pt;
+.tab-container {
+  height: 600px;
+  width: 750rpx;
+  display: flex;
+}
+
+.tab-divide {
+  background-color: #f6f6f6;
+  color: #7a7d80;
+}
+
+.tab-divide-item {
+  width: 53rpx;
+  height: 200px;
+  font-size: 24rpx;
   justify-content: center;
   display: flex;
   align-items: center;
+  border-bottom: 1rpx solid #cacbcc;
+  border-right: 1rpx solid #cacbcc;
+  box-sizing: border-box;
+}
+
+.tab-divide-item text {
+  width: 24rpx;
+  line-height: 1.5;
+}
+
+.tab-section {
+  background-color: #f6f6f6;
+  color: #18191a;
+}
+
+.tab-section-divide {
+  width: 53rpx;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1rpx solid #cacbcc;
+  box-sizing: border-box;
+}
+
+.tab-section-item {
+  width: 53rpx;
+  height: 50px;
+  font-size: 24rpx;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+.tab-line {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #cacbcc;
+  margin-top: -1px;
+}
+
+.course-item {
+  position: absolute;
+  width: 90rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.course-item-inner {
+  width: 88rpx;
+  border-radius: 3px;
+  font-size: 15rpx;
+  color: #fff;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 5rpx;
+  background-color: #90c652;
+  margin: 0 5rpx;
+}
+
+.course-item-inner text:not(:last-child) {
+  margin-bottom: 6rpx;
 }
